# aux

./: .gitignore  CMakeLists.txt  README.md  runner.sh
resources/: syntax.ebnf
resources/test_cases/: SimpleCodeGenExample.lua  Tables.lua
src/: Exception.h  Main.cpp  lualib.cpp
src/constants/: LexicalAnalysisErrorMessages.h
src/exception/: ErrorMessages.h  Exception.h  PatternMatchingException.h  ScannerError.h
src/finite_state_automata/: State.h
src/fsa/: LongBracketReader.h  State.h
src/intermediate_representation/: SymbolTable.h  Token.cpp  Token.h  Tree.h
src/intermediate_representation/ast/: ArgsTree.h  ArithmeticLogicalExpressionTree.h  FunctionCallTree.h  PeSuffixTree.h  PrefixExprTree.h  Tree.h  TreeNode.h  VarTree.h
src/intermediate_representation/tokens/: Token.cpp  Token.h
src/intermediate_representation/tree/: ProgramTree.cpp  ProgramTree.h  SyntaxTree.h  Tree.h
src/parser/: Parser.cpp  Parser.h
src/scanner/: IScanner.h  ModularScanner.cpp  ModularScanner.h  ScanTokenResult.cpp  ScanTokenResult.h
src/scanner/characters/: Delimiters.cpp  Delimiters.h  IdentifierKeyword.h  Numeric.h  StringLiteral.h
src/scanner/components/: CommentsScanner.cpp  CommentsScanner.h  IScannerComponent.h  IdentifierAndKeywordScanner.cpp  IdentifierAndKeywordScanner.h  NumericConstantsDFSAScanner.cpp  NumericConstantsDFSAScanner.h  OperatorScanner.cpp  OperatorScanner.h  OperatorsScanner.h  OppratorsScanner.cpp  StringLiteralScanner.cpp  StringLiteralScanner.h
src/scanner/components/numeric/: NumericConstantsDFSAScanner.cpp  NumericConstantsDFSAScanner.h
src/scanner/fsa/: State.h
src/scanner/input_stream/: IIndexedStream.h  PreprocessedFileInputStream.cpp  PreprocessedFileInputStream.h
src/semantics/: AstVisitor.h  CodeGenerationVisitor.cpp  CodeGenerationVisitor.h  ConstantExpressionEvaluationVisitor.cpp  ConstantExpressionEvaluationVisitor.h  ProgramTreeVisitor.h  Visitor.h
src/semantics/codegen/: ArithmeticLogicalExpressions.cpp  CodeGenerationVisitor.h  CodegenerationVisitor.cpp  Declarations_FunctionCall.cpp
src/semantics/transformation/: AstToProgramTreeTransformationVisitor.cpp  AstToProgramTreeTransformationVisitor.h
src/semantics/transformation/expressions/: ArithmeticLogical.cpp  Declarations_TableAccess.cpp  Functions_Tables.cpp
src/semantics/transformation/statements/: Assignment.cpp  ControlFlow.cpp  Declarations_FunctionCall.cpp
src/util/: Defines.h
test/: ModularScannerTest.cpp  ParserTest.cpp  ScannerComponentsTest.cpp  ScannerTest.cpp  TreePrintingVisitor.cpp  TreePrintingVisitor.h
test/resources/: printedTree.txt
test/resources/test_cases/: BigLuaProgram.lua  Factorial.lua  LexicalErrorsProgram.lua  ScannerTest.lua  SimpleCodeGenExample.lua
